--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,28 +8,124 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <slot />
+  </body>
 </html>
+
 <style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
+  :root {
+    /* colors */
+    --clr-dark: 230 35% 7%;
+    --clr-accent: 231 77% 90%;
+    --clr-white: 0 0% 100%;
+
+    /* font-sizes */
+    --fs-h1: 9.375rem;
+    --fs-h2: 6.25rem;
+    --fs-h3: 3.5rem;
+    --fs-h4: 2rem;
+    --fs-h5: 1.75rem;
+    --fs-sh1: 1.75rem;
+    --fs-sh2: 0.875rem;
+    --fs-body: 1.125rem;
+    --fs-nav: 1rem;
+
+    /* letter-spacings */
+    --ls-1: 2.35px;
+    --ls-2: 2.7px;
+    --ls-3: 4.75px;
+
+    /* font-families */
+    --ff-serif: "Bellefair", serif;
+    --ff-sans-cond: "Barlow Condensed", sans-serif;
+    --ff-sans-normal: "Barlow", sans-serif;
+  }
+
+  html {
+    background-color: hsl(var(--clr-dark));
+    color: hsl(var(--clr-white));
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    min-height: 100vh;
+  }
+
+  /* Typography */
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5,
+  .sh1,
+  .sh2 {
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  .h1 {
+    font-size: var(--fs-h1);
+    font-family: var(--ff-serif);
+  }
+
+  .h2 {
+    font-size: var(--fs-h2);
+    font-family: var(--ff-serif);
+  }
+
+  .h3 {
+    font-size: var(--fs-h3);
+    font-family: var(--ff-serif);
+  }
+
+  .h4 {
+    font-size: var(--fs-h4);
+    font-family: var(--ff-serif);
+  }
+
+  .h5 {
+    color: hsl(var(--clr-accent));
+    font-size: var(--fs-h5);
+    font-family: var(--ff-sans-cond);
+    letter-spacing: var(--ls-3);
+  }
+
+  .sh1 {
+    font-size: var(--fs-sh1);
+    font-family: var(--ff-serif);
+  }
+
+  .sh2 {
+    font-size: var(--fs-sh2);
+    font-family: var(--ff-sans-cond);
+    letter-spacing: var(--ls-1);
+  }
+
+  .paragraph {
+    font-size: var(--fs-body);
+    font-family: var(--ff-sans-normal);
+    margin: 0;
+  }
 </style>
