--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from "../components/Navbar.astro";
+
 export interface Props {
   title: string;
 }
@@ -25,6 +27,7 @@ const { title } = Astro.props;
   </head>
 
   <body>
+    <Navbar />
     <slot />
   </body>
 </html>
@@ -70,6 +73,7 @@ const { title } = Astro.props;
   body {
     margin: 0;
     min-height: 100vh;
+    background-size: cover;
   }
 
   /* Typography */
@@ -79,10 +83,12 @@ const { title } = Astro.props;
   .h4,
   .h5,
   .sh1,
-  .sh2 {
+  .sh2,
+  .navtext {
     font-weight: 400;
     text-transform: uppercase;
     margin: 0;
+    word-break: break-word;
   }
 
   .h1 {
@@ -127,5 +133,32 @@ const { title } = Astro.props;
     font-size: var(--fs-body);
     font-family: var(--ff-sans-normal);
     margin: 0;
+  }
+
+  .navtext {
+    font-size: var(--fs-nav);
+    font-family: var(--ff-sans-cond);
+    letter-spacing: var(--ls-2);
+  }
+
+  /* General */
+  .container {
+    max-width: 70rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .sr-only {
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+    -webkit-clip-path: inset(50%) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    margin: -1px !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+    white-space: nowrap !important;
   }
 </style>
