--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,22 +3,25 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Space Tourism">
-  <h1 class="h1">Space Tourism</h1>
-  <h2 class="h2">This is an h2</h2>
-  <h3 class="h3">This is an h3</h3>
-  <h4 class="h4">This is an h4</h4>
-  <h5 class="h5">This is an h5</h5>
-  <h6 class="sh1">This is a subheading 1</h6>
-  <h6 class="sh2">This is a subheading 2</h6>
-  <p class="paragraph">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dolorum hic cupiditate
-    quisquam maxime error ipsa ad iure alias. Itaque sit optio labore quae iure nobis aspernatur,
-    modi minima quaerat!
-  </p>
+  <main class="container">
+    <h1 class="h1">Space Tourism</h1>
+    <h2 class="h2">This is an h2</h2>
+    <h3 class="h3">This is an h3</h3>
+    <h4 class="h4">This is an h4</h4>
+    <h5 class="h5">This is an h5</h5>
+    <h6 class="sh1">This is a subheading 1</h6>
+    <h6 class="sh2">This is a subheading 2</h6>
+    <p class="paragraph">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dolorum hic cupiditate
+      quisquam maxime error ipsa ad iure alias. Itaque sit optio labore quae iure nobis aspernatur,
+      modi minima quaerat!
+    </p>
+  </main>
 </Layout>
 
 <style>
   body {
     background-image: url("/home/background-home-desktop.jpg");
+    background-position: center;
   }
 </style>
