--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,14 +40,14 @@ const { title } = Astro.props;
     --clr-white: 0 0% 100%;
 
     /* font-sizes */
-    --fs-h1: 9.375rem;
-    --fs-h2: 6.25rem;
-    --fs-h3: 3.5rem;
-    --fs-h4: 2rem;
-    --fs-h5: 1.75rem;
-    --fs-sh1: 1.75rem;
+    --fs-h1: 5rem;
+    --fs-h2: 5rem;
+    --fs-h3: 2.5rem;
+    --fs-h4: 1.5rem;
+    --fs-h5: 1rem;
+    --fs-sh1: 1.125rem;
     --fs-sh2: 0.875rem;
-    --fs-body: 1.125rem;
+    --fs-body: 0.9375rem;
     --fs-nav: 1rem;
 
     /* letter-spacings */
@@ -59,6 +59,38 @@ const { title } = Astro.props;
     --ff-serif: "Bellefair", serif;
     --ff-sans-cond: "Barlow Condensed", sans-serif;
     --ff-sans-normal: "Barlow", sans-serif;
+  }
+
+  /* tablet */
+  @media (min-width: 48rem) {
+    :root {
+      /* font-sizes */
+      --fs-h1: 9.375rem;
+      --fs-h2: 5rem;
+      --fs-h3: 2.5rem;
+      --fs-h4: 1.5rem;
+      --fs-h5: 1.25rem;
+      --fs-sh1: 1.75rem;
+      --fs-sh2: 0.875rem;
+      --fs-body: 1rem;
+      --fs-nav: 1rem;
+    }
+  }
+
+  /* desktop */
+  @media (min-width: 70rem) {
+    :root {
+      /* font-sizes */
+      --fs-h1: 9.375rem;
+      --fs-h2: 6.25rem;
+      --fs-h3: 3.5rem;
+      --fs-h4: 2rem;
+      --fs-h5: 1.75rem;
+      --fs-sh1: 1.75rem;
+      --fs-sh2: 0.875rem;
+      --fs-body: 1.125rem;
+      --fs-nav: 1rem;
+    }
   }
 
   html {
