--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,14 +41,14 @@ const { title } = Astro.props;
 
     /* font-sizes */
     --fs-h1: 5rem;
-    --fs-h2: 5rem;
+    --fs-h2: 3.5rem;
     --fs-h3: 2.5rem;
     --fs-h4: 1.5rem;
     --fs-h5: 1rem;
-    --fs-sh1: 1.125rem;
+    --fs-sh1: 1.75rem;
     --fs-sh2: 0.875rem;
     --fs-body: 0.9375rem;
-    --fs-nav: 1rem;
+    --fs-nav: 0.875rem;
 
     /* letter-spacings */
     --ls-1: 2.35px;
@@ -150,18 +150,24 @@ const { title } = Astro.props;
     letter-spacing: var(--ls-3);
   }
 
+  .h5--white {
+    color: hsl(var(--clr-white));
+  }
+
   .sh1 {
     font-size: var(--fs-sh1);
     font-family: var(--ff-serif);
   }
 
   .sh2 {
+    color: hsl(var(--clr-accent));
     font-size: var(--fs-sh2);
     font-family: var(--ff-sans-cond);
     letter-spacing: var(--ls-1);
   }
 
   .paragraph {
+    color: hsl(var(--clr-accent));
     font-size: var(--fs-body);
     font-family: var(--ff-sans-normal);
     margin: 0;
@@ -192,5 +198,24 @@ const { title } = Astro.props;
     position: absolute !important;
     width: 1px !important;
     white-space: nowrap !important;
+  }
+
+  .title-number {
+    display: inline-block;
+    margin-right: 1.1875rem;
+    color: hsl(var(--clr-white) / 25%);
+    font-weight: bold;
+  }
+
+  @media (min-width: 48rem) {
+    .title-number {
+      margin-right: 1.5rem;
+    }
+  }
+
+  @media (min-width: 70rem) {
+    .title-number {
+      margin-right: 1.75rem;
+    }
   }
 </style>
