--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Space Tourism">
+<Layout title="Space Tourism" activeLink="/">
   <main class="container">
     <div class="message-container">
       <h1 class="h1"><div class="h5">So you want to travel to</div><div>Space</div></h1>
