--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,10 @@ import Navbar from "../components/Navbar.astro";
 
 export interface Props {
   title: string;
+  activeLink: string;
 }
 
-const { title } = Astro.props;
+const { title, activeLink } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -27,7 +28,7 @@ const { title } = Astro.props;
   </head>
 
   <body>
-    <Navbar />
+    <Navbar activeLink={activeLink} />
     <slot />
   </body>
 </html>
