Adjust crew pages layoout on desktop pages

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -186,6 +186,7 @@ const { title, activeLink } = Astro.props;
 
   /* General */
   .container {
+    width: 100%;
     max-width: 70rem;
     margin-left: auto;
     margin-right: auto;
