--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const { title, activeLink } = Astro.props;
     --fs-h2: 3.5rem;
     --fs-h3: 1.5rem;
     --fs-h4: 1rem;
-    --fs-h5: 1rem;
+    --fs-h5: 0.875rem;
     --fs-sh1: 1.75rem;
     --fs-sh2: 0.875rem;
     --fs-body: 0.9375rem;
@@ -176,6 +176,7 @@ const { title, activeLink } = Astro.props;
     font-size: var(--fs-body);
     font-family: var(--ff-sans-normal);
     margin: 0;
+    line-height: 2rem;
   }
 
   .navtext {
