--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -80,6 +80,9 @@ const { activeLink } = Astro.props;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    max-width: 90rem;
+    margin: 0 auto;
   }
 
   .navbar__logo {
