--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
       </p>
     </div>
 
-    <div class="cta-container"><a href="#" class="explore-btn">Explore</a></div>
+    <div class="cta-container"><a href="/destination-moon" class="explore-btn">Explore</a></div>
   </main>
 </Layout>
 
